// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render authenticated routes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="heading"
      >
        <div />
        <div>
          <div
            class="heading-logo"
          >
            <h3>
              Swiss
              <img
                alt="logo"
                class="logo"
                src="rolex_logo.png"
              />
              Watches
            </h3>
            <nav
              class="nav"
            >
              <ul>
                <li>
                  <a
                    class="link"
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/account"
                  >
                    Account
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/create"
                  >
                    Add
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/watches"
                  >
                    Watches
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/about"
                  >
                    About us
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/contact"
                  >
                    Contact us
                  </a>
                </li>
                <input
                  placeholder="Search..."
                />
                <i
                  class="fas fa-search"
                />
              </ul>
            </nav>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="heading"
    >
      <div />
      <div>
        <div
          class="heading-logo"
        >
          <h3>
            Swiss
            <img
              alt="logo"
              class="logo"
              src="rolex_logo.png"
            />
            Watches
          </h3>
          <nav
            class="nav"
          >
            <ul>
              <li>
                <a
                  class="link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/account"
                >
                  Account
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/create"
                >
                  Add
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/watches"
                >
                  Watches
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/about"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/contact"
                >
                  Contact us
                </a>
              </li>
              <input
                placeholder="Search..."
              />
              <i
                class="fas fa-search"
              />
            </ul>
          </nav>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header should render non-authenticated routes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="heading"
      >
        <div />
        <div>
          <div
            class="heading-logo"
          >
            <h3>
              Swiss
              <img
                alt="logo"
                class="logo"
                src="rolex_logo.png"
              />
              Watches
            </h3>
            <nav
              class="nav"
            >
              <ul>
                <li>
                  <a
                    class="link"
                    href="/"
                  >
                    Home
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/watches"
                  >
                    Watches
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/register"
                  >
                    Register
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/login"
                  >
                    Login
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/about"
                  >
                    About us
                  </a>
                </li>
                <li>
                  <a
                    class="link"
                    href="/contact"
                  >
                    Contact us
                  </a>
                </li>
                <input
                  placeholder="Search..."
                />
                <i
                  class="fas fa-search"
                />
              </ul>
            </nav>
          </div>
        </div>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="heading"
    >
      <div />
      <div>
        <div
          class="heading-logo"
        >
          <h3>
            Swiss
            <img
              alt="logo"
              class="logo"
              src="rolex_logo.png"
            />
            Watches
          </h3>
          <nav
            class="nav"
          >
            <ul>
              <li>
                <a
                  class="link"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/watches"
                >
                  Watches
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/register"
                >
                  Register
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/login"
                >
                  Login
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/about"
                >
                  About us
                </a>
              </li>
              <li>
                <a
                  class="link"
                  href="/contact"
                >
                  Contact us
                </a>
              </li>
              <input
                placeholder="Search..."
              />
              <i
                class="fas fa-search"
              />
            </ul>
          </nav>
        </div>
      </div>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
